--- a/Coffeshop/OrderPage/OrderViewController.xib
+++ b/Coffeshop/OrderPage/OrderViewController.xib
@@ -13,6 +13,10 @@
                 <outlet property="adressLabel" destination="Tnm-vJ-eN5" id="lUz-EU-8QO"/>
                 <outlet property="deliveryMethodLabel" destination="aKi-1F-nj9" id="DVO-AA-bcF"/>
                 <outlet property="orderMethodControl" destination="UgA-42-vvn" id="PTI-OQ-yXx"/>
+                <outlet property="priceLabel" destination="IHV-EO-TZ2" id="NIM-yp-V9T"/>
+                <outlet property="productDescription" destination="QXO-K9-Bj9" id="VE9-K7-0ZY"/>
+                <outlet property="productImage" destination="HiF-w0-Jws" id="D3p-wf-0el"/>
+                <outlet property="productName" destination="a3W-V2-wVl" id="flF-ui-p05"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -110,23 +114,23 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="sjI-yZ-dce">
-                    <rect key="frame" x="104" y="308.33333333333331" width="100" height="53.666666666666686"/>
+                    <rect key="frame" x="104" y="308.33333333333331" width="180" height="53.666666666666686"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3W-V2-wVl">
-                            <rect key="frame" x="0.0" y="0.0" width="100" height="20.333333333333332"/>
+                            <rect key="frame" x="0.0" y="0.0" width="180" height="20.333333333333332"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QXO-K9-Bj9">
-                            <rect key="frame" x="0.0" y="33.333333333333371" width="100" height="20.333333333333329"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="QXO-K9-Bj9">
+                            <rect key="frame" x="0.0" y="33.333333333333371" width="180" height="20.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="FZQ-15-O4K"/>
+                        <constraint firstAttribute="width" constant="180" id="FZQ-15-O4K"/>
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yQS-NB-KzR">
@@ -184,7 +188,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="177" translatesAutoresizingMaskIntoConstraints="NO" id="u9S-eF-VoH">
-                    <rect key="frame" x="25" y="543" width="312.33333333333331" height="20.333333333333371"/>
+                    <rect key="frame" x="25" y="572.66666666666663" width="317.33333333333331" height="20.333333333333371"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delivery Fee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSx-gH-ra4">
                             <rect key="frame" x="0.0" y="0.0" width="94" height="20.333333333333332"/>
@@ -192,8 +196,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJh-n3-umh">
-                            <rect key="frame" x="271" y="0.0" width="41.333333333333314" height="20.333333333333332"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 1.90" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJh-n3-umh">
+                            <rect key="frame" x="271" y="0.0" width="46.333333333333314" height="20.333333333333332"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -205,16 +209,16 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="232" translatesAutoresizingMaskIntoConstraints="NO" id="8ZH-gM-rV6">
-                    <rect key="frame" x="25" y="517.66666666666663" width="312" height="20.333333333333371"/>
+                    <rect key="frame" x="25" y="517.66666666666663" width="320.66666666666669" height="50"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1L-2Q-Wxo">
-                            <rect key="frame" x="0.0" y="0.0" width="38.666666666666664" height="20.333333333333332"/>
+                            <rect key="frame" x="0.0" y="0.0" width="38.666666666666664" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IHV-EO-TZ2">
-                            <rect key="frame" x="270.66666666666669" y="0.0" width="41.333333333333314" height="20.333333333333332"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IHV-EO-TZ2">
+                            <rect key="frame" x="270.66666666666669" y="0.0" width="50" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -226,7 +230,7 @@
                     </constraints>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cBc-US-eRx">
-                    <rect key="frame" x="0.0" y="598.33333333333337" width="393" height="253.66666666666663"/>
+                    <rect key="frame" x="0.0" y="628" width="393" height="224"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallet" translatesAutoresizingMaskIntoConstraints="NO" id="IYy-YP-uzJ">
                             <rect key="frame" x="15" y="23" width="30" height="30"/>
@@ -245,7 +249,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KjF-4C-98p">
-                                    <rect key="frame" x="0.0" y="28.333333333333258" width="178" height="20.333333333333329"/>
+                                    <rect key="frame" x="0.0" y="28.333333333333371" width="178" height="20.333333333333329"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
