--- a/Coffeshop/ProductPage/ProductViewController.xib
+++ b/Coffeshop/ProductPage/ProductViewController.xib
@@ -213,6 +213,9 @@
                             <buttonConfiguration key="configuration" style="filled" title="Buy Now">
                                 <color key="baseBackgroundColor" red="0.73725497719999999" green="0.49803921579999999" blue="0.33725491169999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </buttonConfiguration>
+                            <connections>
+                                <action selector="orderButton:" destination="-1" eventType="touchUpInside" id="eQg-mI-FbQ"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
